# valuorante

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  main.cpp
client/source/include/: Icon.h  Math.h  MathUtil.h  Overlay.h  Render.h  Socket.h  XorString.h
client/source/src/: MathUtil.cpp  Overlay.cpp  Render.cpp  Socket.cpp  XorString.cpp
server/: CMakeLists.txt  main.cpp
server/source/include/: GameLoop.h  Includes.h  Math.h  Offsets.h  Socket.h  XorString.h  drive.h
tools/: CMakeLists.txt
tools/dumper/: CMakeLists.txt
tools/dumper/Platform/Private/: Arch_x86.cpp  PlatformWindows.cpp  PlatformWindows.h
tools/dx12hook/: CMakeLists.txt  Dllmain.cpp
tools/dx12hook/hook/: gameLoop.cpp  gameLoop.h  hook.cpp  hook.h  utils.cpp  utils.h
tools/kiero/: CMakeLists.txt
tools/kiero/src/: hook.c  kiero.cpp
