set(TARGET_NAME Server)


file(GLOB_RECURSE ${TARGET_NAME}_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
file(GLOB_RECURSE ${TARGET_NAME}_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${${TARGET_NAME}_SOURCES} ${${TARGET_NAME}_HEADERS})
add_executable(${TARGET_NAME} ${RESOURCE} ${${TARGET_NAME}_SOURCES} ${${TARGET_NAME}_HEADERS} )

target_include_directories(${TARGET_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/source/include>)
